[package]
name = "sdl2_ttf"
description = "SDL2_ttf bindings for Rust"
repository = "https://github.com/andelf/rust-sdl2_ttf"
version = "0.32.0"
license = "MIT"
readme = "README.md"
authors = ["ShuYu Wang <andelf@gmail.com>", "Hanna Reitz <hanna@xanclic.moe>"]
keywords = ["SDL", "windowing", "graphics", "font","ttf"]

[lib]
name = "sdl2_ttf"
path = "src/sdl2_ttf/lib.rs"

[dependencies]
bitflags = "1.2"
sdl2 = "0.32"
sdl2-sys = "0.32"

# [dependencies.sdl2]
# git = "https://github.com/AngryLawyer/rust-sdl2/"

# [dependencies.sdl2-sys]
# git = "https://github.com/AngryLawyer/rust-sdl2/"
