[package]
name = "sdl2_ttf"
description = "SDL2_ttf bindings for Rust"
repository = "https://github.com/andelf/rust-sdl2_ttf"
version = "0.37.0"
license = "MIT"
readme = "README.md"
authors = ["ShuYu Wang <andelf@gmail.com>", "Hanna Reitz <hanna@xanclic.moe>"]
keywords = ["SDL", "windowing", "graphics", "font","ttf"]
edition = "2021"

[lib]
name = "sdl2_ttf"
path = "src/sdl2_ttf/lib.rs"

[dependencies]
bitflags = "2.6"
sdl2 = "0.37"
sdl2-sys = "0.37"

# [dependencies.sdl2]
# git = "https://github.com/AngryLawyer/rust-sdl2/"

# [dependencies.sdl2-sys]
# git = "https://github.com/AngryLawyer/rust-sdl2/"
